# py.hsbi-timetable_2.0

./: .gitignore  check_gs.py  main.py  merged_output.txt  plantuml.py  project-hierarchy.txt  pyproject.toml  readme.md  requirements.txt  ruff.toml  setup.sh  tempCodeRunnerFile.py  test.html
.devcontainer/: Dockerfile  devcontainer.json  setup_git.sh
config/: config-sample.yaml
src/: main.py
src/libs/: __init__.py  camelot_pdf_to_df.py  downloader.py  get_timetable_ver.py  logger.py  openai_parser.py  parser.py  parser_df_to_events.py  parser_openai.py  parser_pdf_to_df.py  parser_pdf_to_df_class.py  process_raw_df.py  tempCodeRunnerFile.py  timetable_version.py  update_google_calendar.py  utils.py
src/modules/: download_webdav_timetables.py  get_timetable_ver.py  helper_functions.py  parser_df_to_events.py  update_google_calendar.py
